# codeContextCrafter

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  TEST_COVERAGE_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_cicd_review.md  feature_enhanced_imports.md  feature_line_annotations.md  feature_request.md  feature_tree_sitter_direct.md
.github/workflows/: tests.yml
codecontextcrafter/: __init__.py  __main__.py  code_context_crafter.py  config_parser.py
codecontextcrafter/aider/: FORK_INFO.md  NOTICE  README.md  __init__.py  _version.py  editor.py  io.py  mdstream.py  repomap.py  sendchat.py  utils.py
codecontextcrafter/traverser/: traverse_dependencies.py
test/codecontextcrafter/: test_cli_integration.py  test_config_parser.py  test_end_to_end.py  test_traverse_dependencies.py
